fix (Document) : Исправление CRUD документа