@@ -1,16 +1,13 @@
 package caselab.service.document;
 
-import caselab.controller.document.payload.DocumentAttributeValueDTO;
-import caselab.controller.document.payload.DocumentRequest;
-import caselab.controller.document.payload.DocumentResponse;
+import caselab.controller.document.payload.document.dto.DocumentRequest;
+import caselab.controller.document.payload.document.dto.DocumentResponse;
+import caselab.controller.document.payload.user.to.document.dto.UserToDocumentRequest;
+import caselab.controller.document.payload.user.to.document.dto.UserToDocumentResponse;
 import caselab.domain.IntegrationTest;
 import caselab.domain.entity.ApplicationUser;
-import caselab.domain.entity.Attribute;
 import caselab.domain.entity.DocumentType;
-import caselab.domain.entity.enums.GlobalPermissionName;
 import caselab.domain.repository.ApplicationUserRepository;
-import caselab.domain.repository.AttributeRepository;
-import caselab.domain.repository.DocumentRepository;
 import caselab.domain.repository.DocumentTypesRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -20,7 +17,6 @@ import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.test.annotation.Rollback;
 import org.springframework.transaction.annotation.Transactional;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.NoSuchElementException;
 import static org.junit.jupiter.api.Assertions.assertAll;
@@ -28,73 +24,44 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
-@SpringBootTest
-@Transactional
-@Rollback
-public class DocumentServiceTest extends IntegrationTest {
+@SpringBootTest @Transactional @Rollback public class DocumentServiceTest extends IntegrationTest {
 
-    @Autowired
-    private DocumentService documentService;
-    @Autowired
-    private DocumentRepository documentRepository;
-    @Autowired
-    private DocumentTypesRepository documentTypeRepository;
-    @Autowired
-    private ApplicationUserRepository applicationUserRepository;
-    @Autowired
-    private AttributeRepository attributeRepository;
+    @Autowired private DocumentService documentService;
+    @Autowired private DocumentTypesRepository documentTypeRepository;
+    @Autowired private ApplicationUserRepository applicationUserRepository;
 
     private Long documentTypeId;
     private Long user1Id;
     private Long user2Id;
-    private Long attributeId;
+    private DocumentRequest documentRequest;
+    private UserToDocumentRequest UTD1;
+    private UserToDocumentRequest UTD2;
 
-    @BeforeEach
-    public void setUp() {
+    @BeforeEach public void setUp() {
         DocumentType documentType = new DocumentType();
         documentType.setName("Test Document Type");
         documentType = documentTypeRepository.save(documentType);
         documentTypeId = documentType.getId();
 
-        ApplicationUser user1 = ApplicationUser.builder()
-            .login("Test login 1 ")
-            .displayName("Test display name 1")
-            .role(GlobalPermissionName.USER)
-            .hashedPassword("abc")
-            .build();
-        ApplicationUser user2 = ApplicationUser.builder()
-            .login("Test login 2 ")
-            .displayName("Test display name 2")
-            .role(GlobalPermissionName.USER)
-            .hashedPassword("abc")
-            .build();
+        ApplicationUser user1 =
+            ApplicationUser.builder().email("Test email 1 ").displayName("Test display name 1").hashedPassword("abc")
+                .build();
+        ApplicationUser user2 =
+            ApplicationUser.builder().email("Test email 2 ").displayName("Test display name 2").hashedPassword("abc")
+                .build();
         user1 = applicationUserRepository.save(user1);
         user1Id = user1.getId();
         user2 = applicationUserRepository.save(user2);
         user2Id = user2.getId();
-        Attribute attribute = new Attribute();
-        attribute.setName("Test attribute 1");
-        attribute.setType("String");
-        attribute.setDocumentTypes(List.of(documentType));
-        attribute = attributeRepository.save(attribute);
-        attributeId = attribute.getId();
+        UTD1 = UserToDocumentRequest.builder().documentPermissionId(List.of(1L)).userId(user1Id).build();
+        UTD2 = UserToDocumentRequest.builder().documentPermissionId(List.of(1L)).userId(user2Id).build();
+        documentRequest =
+            DocumentRequest.builder().documentTypeId(documentTypeId).usersPermissions(Arrays.asList(UTD1, UTD2))
+                .name("Test name").build();
 
     }
 
-    @DisplayName("Should create document")
-    @Test
-    public void testCreateDocument() {
-        // Arrange
-        DocumentAttributeValueDTO attributeValueDTO = DocumentAttributeValueDTO.builder()
-            .id(attributeId)
-            .value("Test Value")
-            .build();
-        DocumentRequest documentRequest = DocumentRequest.builder()
-            .documentTypeId(documentTypeId)
-            .applicationUserIds(Arrays.asList(user1Id, user2Id))
-            .attributeValues(Collections.singletonList(attributeValueDTO))
-            .build();
-
+    @DisplayName("Should create document") @Test public void testCreateDocument() {
         // Act
         DocumentResponse result = documentService.createDocument(documentRequest);
 
@@ -104,26 +71,15 @@ public class DocumentServiceTest extends IntegrationTest {
             () -> assertNotNull(result),
             () -> assertNotNull(result.id()),
             () -> assertEquals(documentTypeId, result.documentTypeId()),
-            () -> assertEquals(Arrays.asList(user1Id, user2Id), result.applicationUserIds()),
-            () -> assertEquals(attributeId, result.attributeValues().get(0).id()),
-            () -> assertEquals("Test Value", result.attributeValues().get(0).value())
+            () -> assertEquals(
+                Arrays.asList(user1Id, user2Id),
+                result.usersPermissions().stream().map(UserToDocumentResponse::id).toList()
+            ),
+            () -> assertEquals("Test name", result.name())
         );
     }
 
-    @DisplayName("Should update document type for document")
-    @Test
-    public void testUpdateDocument() {
-        // Arrange
-        DocumentAttributeValueDTO attributeValueDTO = DocumentAttributeValueDTO.builder()
-            .id(attributeId)
-            .value("Test Value")
-            .build();
-        DocumentRequest documentRequest = DocumentRequest.builder()
-            .documentTypeId(documentTypeId)
-            .applicationUserIds(Arrays.asList(user1Id, user2Id))
-            .attributeValues(Collections.singletonList(attributeValueDTO))
-            .build();
-
+    @DisplayName("Should update document type for document") @Test public void testUpdateDocument() {
         // Act
         DocumentResponse result = documentService.createDocument(documentRequest);
         Long id = result.id();
@@ -133,14 +89,10 @@ public class DocumentServiceTest extends IntegrationTest {
         newDocumentType = documentTypeRepository.save(newDocumentType);
         Long updatedDocumentTypeId = newDocumentType.getId();
 
-        DocumentRequest updatingDocumentRequest = DocumentRequest.builder()
-            .documentTypeId(updatedDocumentTypeId)
-            .applicationUserIds(result.applicationUserIds())
-            .attributeValues(result.attributeValues())
-            .id(result.id())
-            .build();
-        DocumentResponse updatingDocumentResponseDTO =
-            documentService.updateDocument(id, updatingDocumentRequest);
+        DocumentRequest updatingDocumentRequest =
+            DocumentRequest.builder().documentTypeId(updatedDocumentTypeId).usersPermissions(Arrays.asList(UTD1, UTD2))
+                .name(result.name()).build();
+        DocumentResponse updatingDocumentResponseDTO = documentService.updateDocument(id, updatingDocumentRequest);
 
         // Assert
         assertAll(
@@ -148,26 +100,16 @@ public class DocumentServiceTest extends IntegrationTest {
             () -> assertNotNull(updatingDocumentResponseDTO),
             () -> assertEquals(id, updatingDocumentResponseDTO.id()),
             () -> assertEquals(updatedDocumentTypeId, updatingDocumentResponseDTO.documentTypeId()),
-            () -> assertEquals(Arrays.asList(user1Id, user2Id), updatingDocumentResponseDTO.applicationUserIds()),
-            () -> assertEquals(attributeId, updatingDocumentResponseDTO.attributeValues().get(0).id()),
-            () -> assertEquals("Test Value", updatingDocumentResponseDTO.attributeValues().get(0).value())
+            () -> assertEquals(
+                Arrays.asList(user1Id, user2Id),
+                updatingDocumentResponseDTO.usersPermissions().stream().map(UserToDocumentResponse::id).toList()
+            ),
+            () -> assertEquals("Test name", result.name())
         );
     }
 
-    @DisplayName("Should delete document")
-    @Test
-    public void testDeleteDocument() {
-        // Arrange
-        DocumentAttributeValueDTO attributeValueDTO = DocumentAttributeValueDTO.builder()
-            .id(attributeId)
-            .value("Test value")
-            .build();
-        DocumentRequest documentRequest = DocumentRequest.builder()
-            .documentTypeId(documentTypeId)
-            .applicationUserIds(Arrays.asList(user1Id, user2Id))
-            .attributeValues(Collections.singletonList(attributeValueDTO))
-            .build();
-
+    @DisplayName("Should delete document") @Test public void testDeleteDocument() {
+        // Act
         DocumentResponse result = documentService.createDocument(documentRequest);
         Long id = result.id();
         // Act
@@ -177,26 +119,13 @@ public class DocumentServiceTest extends IntegrationTest {
         assertThrows(NoSuchElementException.class, () -> documentService.getDocumentById(id));
     }
 
-    @DisplayName("Should not found document")
-    @Test
-    public void testDeleteDocumentNotFound() {
+    @DisplayName("Should not found document") @Test public void testDeleteDocumentNotFound() {
         // Act & Assert
-        assertThrows(NoSuchElementException.class, () -> documentService.deleteDocument(1L));
+        assertThrows(NoSuchElementException.class, () -> documentService.deleteDocument(Long.MAX_VALUE));
     }
 
-    @DisplayName("Should return document")
-    @Test
-    public void testGetDocumentById() {
+    @DisplayName("Should return document") @Test public void testGetDocumentById() {
         // Arrange
-        DocumentAttributeValueDTO attributeValueDTO = DocumentAttributeValueDTO.builder()
-            .id(attributeId)
-            .value("Test Value")
-            .build();
-        DocumentRequest documentRequest = DocumentRequest.builder()
-            .documentTypeId(documentTypeId)
-            .applicationUserIds(Arrays.asList(user1Id, user2Id))
-            .attributeValues(Collections.singletonList(attributeValueDTO))
-            .build();
         DocumentResponse result = documentService.createDocument(documentRequest);
 
         // Act
@@ -208,9 +137,11 @@ public class DocumentServiceTest extends IntegrationTest {
             () -> assertNotNull(result),
             () -> assertEquals(result.id(), findById.id()),
             () -> assertEquals(documentTypeId, findById.documentTypeId()),
-            () -> assertEquals(Arrays.asList(user1Id, user2Id), findById.applicationUserIds()),
-            () -> assertEquals(attributeId, findById.attributeValues().get(0).id()),
-            () -> assertEquals("Test Value", findById.attributeValues().get(0).value())
+            () -> assertEquals(
+                Arrays.asList(user1Id, user2Id),
+                result.usersPermissions().stream().map(UserToDocumentResponse::id).toList()
+            ),
+            () -> assertEquals("Test name", result.name())
         );
     }
 
